--- a/FoodboxFrontend/Dockerfile
+++ b/FoodboxFrontend/Dockerfile
@@ -1,16 +1,10 @@
-FROM node:latest as builder
-
-RUN mkdir -p /app
-
+# stage 1
+FROM node:latest as node
 WORKDIR /app
-
 COPY . .
-
 RUN npm install
 RUN npm run build --prod
 
-CMD ["npm", "start"]
-
-
-
-
+# stage 2
+FROM nginx:alpine
+COPY --from=node /app/dist/FoodboxFrontend /usr/share/nginx/html
