--- a/FoodboxBackend/src/main/resources/application.properties
+++ b/FoodboxBackend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=none
 AES.Key=Bar12345Bar12345
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb
+spring.datasource.url=jdbc:mysql://springbootdb.cqjozqqe6kpw.us-east-1.rds.amazonaws.com:3306/springbootdb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root1234
 server.port=8087
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
